<?xml version="1.0" encoding="utf-8"?>

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:orientation="vertical"
              android:layout_width="match_parent"
              android:layout_height="match_parent">

    <RelativeLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="45dp"
        android:layout_marginTop="45dp"
        android:layout_marginBottom="40dp"
        android:background="@drawable/rounded"
        android:id="@+id/relativeLayout"
        android:padding="10dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="MadWorld"
            android:id="@+id/textView"
            android:layout_centerHorizontal="true"
            android:textSize="36dp"
            android:background="@drawable/backtext"
            android:gravity="center"
            android:textStyle="bold"
            android:textColor="#ffffffff"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/musicString"
            android:id="@+id/textView2"
            android:layout_alignParentStart="true"
            android:padding="3dp"
            android:background="#ffa300e0"
            android:gravity="center"
            android:textColor="#ffffffff"
            android:layout_above="@+id/textView4"
            android:layout_toLeftOf="@+id/textView5"
            android:layout_below="@+id/textView"
            android:layout_margin="2dp"
            android:ellipsize="middle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/paganiniString"
            android:id="@+id/textView3"
            android:padding="3dp"
            android:background="#ffa300e0"
            android:singleLine="false"
            android:textColor="#ffffffff"
            android:layout_alignStart="@+id/textView"
            android:layout_below="@+id/textView"
            android:layout_margin="2dp"
            android:ellipsize="middle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/elseString"
            android:id="@+id/textView4"
            android:background="#ffa300e0"
            android:layout_below="@+id/textView3"
            android:layout_alignParentStart="true"
            android:gravity="center"
            android:padding="3dp"
            android:layout_toLeftOf="@+id/textView5"
            android:singleLine="false"
            android:layout_margin="2dp"
            android:layout_marginBottom="2dp"
            android:ellipsize="middle"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textAppearance="?android:attr/textAppearanceMedium"
            android:text="@string/lilString"
            android:id="@+id/textView5"
            android:gravity="center"
            android:background="#ffa300e0"
            android:padding="3dp"
            android:layout_below="@+id/textView3"
            android:layout_marginTop="2dp"
            android:layout_alignStart="@+id/textView3"
            android:layout_alignBottom="@+id/textView4"
            android:ellipsize="middle"
            android:layout_alignEnd="@+id/textView3"/>

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/toGameString"
            android:id="@+id/toMenuButton"
            android:background="@drawable/button"
            android:layout_below="@+id/textView4"
            android:layout_alignEnd="@+id/textView5"
            android:layout_alignStart="@+id/textView4"
            android:padding="0dp"
            android:layout_alignParentBottom="true"
            android:gravity="center"/>

    </RelativeLayout>

</RelativeLayout>